--- a/react-frontend/src/css/profile.css
+++ b/react-frontend/src/css/profile.css
@@ -1,11 +1,13 @@
 /* ============================================================================================== */
-/* GENERAL LAYOUT STYLES */
+/* PROFILE STYLES */
 /* ============================================================================================== */
-.container {
-  height: 100%;
+.profile-header {
+  /* height: 100%;
   position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: column; */
 }
 
+.profile-name {
+  /* font-family: 'Roboto'; */
+}
