--- a/react-frontend/src/css/page.css
+++ b/react-frontend/src/css/page.css
@@ -9,3 +9,14 @@
   align-items: center;
 }
 
+/* ============================================================================================== */
+/* NAVIGATION STYLES */
+/* ============================================================================================== */
+.nav-bar {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-tab {
+
+}
