--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,5 +1,5 @@
 .jumbotron {
-    background-color: #f4511e; /* Orange */
+    background-color: #d8d8d8; /* Grey */
     color: #ffffff;
     margin-bottom: 0px;
   }
