--- a/react-frontend/src/components/applications/applications.css
+++ b/react-frontend/src/components/applications/applications.css
@@ -119,9 +119,10 @@
 button {
   width: 200px;
   height: 40px;
-  font-size: 15px;
+  font-size: 18px;
   background-color: white;
   border: none;
+  font-family: Source Sans Pro;
 }
 
 .application-section-list {
