--- a/react-frontend/src/components/interviewPrep/interviewPrep.css
+++ b/react-frontend/src/components/interviewPrep/interviewPrep.css
@@ -32,8 +32,46 @@
 }
 
 .record-button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.record-button-container p {
+  margin: 0;
+}
+
+/* animation for record button gotten from https://codepen.io/aeewhite/pen/BjzbOL */
+@keyframes pulse {
+  0% {
+    box-shadow: 0px 0px 5px 0px rgba(173, 0, 0, 0.3);
+  }
+  65% {
+    box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0.3);
+  }
+  90% {
+    box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0);
+  }
+}
+
+.Rec {
+  animation-name: pulse;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  background-color: red;
+}
+
+.notRec {
+  background-color: darkred;
 }
 
 .record-button {
-  
+  width: 35px;
+  height: 35px;
+  font-size: 0;
+  border-radius: 35px;
 }
