--- a/react-frontend/src/components/interviewPrep/interviewPrep.css
+++ b/react-frontend/src/components/interviewPrep/interviewPrep.css
@@ -87,7 +87,7 @@
   /* background-color: darkred; */
   border: 1px solid #edeff1;
   border-radius: 35px;
-  width: 100px
+  width: 100px;
 }
 
 .record-button {
@@ -100,7 +100,7 @@
   align-content: flex-start;
   justify-content: space-between;
   list-style-type: none;
-  padding: 0
+  padding: 0;
 }
 
 .analysis-card {
@@ -109,6 +109,7 @@
   align-content: center;
   border: 1px solid #edeff1;
   padding: 10px 20px 40px 20px;
+  border-radius: 10px;
   width: 175px;
   text-align: center;
 }
@@ -118,4 +119,13 @@
   color: #858484;
 }
 
+.overall-score-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
+.overall-score {
+  font-size: 24pt;
+  color: #858484;
+}
